--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
